--- a/pcd.html
+++ b/pcd.html
@@ -227,7 +227,8 @@
                 document.getElementById('viewer').appendChild(renderer.domElement);
 
                 controls = new OrbitControls(camera, renderer.domElement);
-                controls.enableDamping = true;
+                controls.enableDamping = false;
+                //惯性
                 controls.dampingFactor = 0.05;
                 controls.screenSpacePanning = false;
                 controls.minDistance = 0.1;
