--- a/pcdtest.html
+++ b/pcdtest.html
@@ -372,7 +372,7 @@ class PointCloudViewer {
 
         // 创建控制器
         this.controls = new OrbitControls(this.camera, this.renderer.domElement);
-        this.controls.enableDamping = true;
+        this.controls.enableDamping = false;
         this.controls.dampingFactor = 0.05;
         this.controls.screenSpacePanning = false;
         this.controls.minDistance = 0.1;
