--- a/fecoder/laser.html
+++ b/fecoder/laser.html
@@ -139,7 +139,7 @@
 
         <section id="diagram">
             <h2>示意图</h2>
-            <img src="pulsed_laser_diagram.png" alt="脉冲激光器示意图" width="600">
+            <img src="laser.svg" alt="脉冲激光器示意图" width="600">
             <p>（这是一张脉冲激光器的简化示意图，展示了主要组件和光路。）</p>
         </section>
     </main>
